--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:authorities="@string/provider"
+            android:name="com.moa.tasktimer.AppProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
