Implemented DurationsReport Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,34 @@
         android:theme="@style/Theme.TaskTimer"
         tools:targetApi="31">
         <activity
+            android:name=".DurationsReport"
+            android:exported="false"
+            android:label="@string/title_activity_durations_report"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.TaskTimer" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"
+                />
+        </activity>
+
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.TaskTimer">
+            android:theme="@style/Theme.TaskTimer"
+            tools:ignore="RedundantLabel">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <provider
+            android:name=".AppProvider"
             android:authorities="@string/provider"
-            android:name="com.moa.tasktimer.AppProvider"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
